[package]
name = "game_made_of_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.bevy]
version = "0.8.0"

[dev-dependencies.bevy]
version = "0.8.0"
features = ["dynamic", "trace"]

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
